# opcdaaehda-client-solution-cpp

./: .gitattributes  .gitignore  CHANGELOG.md  OpcDaAeHdaClient.sln  README.md  VERSION  WorkshopClientSamples.sln
.github/ISSUE_TEMPLATE/: issue-template.md
.github/workflows/: publish-to-test-pypi.yml
Win32/DemoServer/: Aggregate Calculations.xls  Aggregate Data 1.csv  Aggregate Data 2.csv  OpcHdaServer.config.xml  Ramp [15 min UTC].csv  Ramp [15 min].csv  Raw Data 1.csv  Sine [15 min UTC].csv  Sine [15 min].csv  Square [15 min UTC].csv  Square [15 min].csv
doc/client/: Doxyfile  deployment.txt  faq.txt  footer.html  index.hhp.txt  index.txt  introduction.txt  license.txt  starting_with_ae.txt  starting_with_da.txt  starting_with_hda.txt  trouble.txt
examples/c++/AeSample/: AeSample.sln  AeSample.vcxproj  AeSample.vcxproj.filters  ClassicAeSample.cpp  ClassicAeSample.h  ClassicAeSample.rc  ClassicAeSampleDoc.cpp  ClassicAeSampleDoc.h  ClassicAeSampleView.cpp  ClassicAeSampleView.h  MainFrm.cpp  MainFrm.h  SelectServerDlg.cpp  SelectServerDlg.h  matchpattern.cpp  matchpattern.h  resource.h  stdafx.cpp  stdafx.h
examples/c++/AeSample/res/: ClassicAeSample.manifest  ClassicAeSample.rc2
examples/c++/DaBrowserConsole/: DaBrowserConsole.cpp  DaBrowserConsole.sln  DaBrowserConsole.vcxproj  DaBrowserConsole.vcxproj.filters
examples/c++/DaConsole/: DaConsole.cpp  DaConsole.vcxproj  DaConsole.vcxproj.filters
examples/c++/HdaConsole/: HdaConsole.cpp  HdaConsole.sln  HdaConsole.vcxproj  HdaConsole.vcxproj.filters
examples/doc/client/: CMakeLists.txt  DaBrowserConsole.cpp  DaConsole.cpp  HdaConsole.cpp
examples/python/PyDaBrowserConsole/: PyDaBrowserConsole.py  PyDaBrowserConsole.pyproj  PyDaConsole.py
include/Base/: ASCIIEncoding.h  Alignment.h  Array.h  Ascii.h  AtomicCounter.h  AutoPtr.h  Base.h  Buffer.h  Bugcheck.h  ByteOrder.h  Config.h  DateTime.h  DateTimeFormat.h  DateTimeFormatter.h  DateTimeParser.h  Debugger.h  Exception.h  FPEnvironment.h  FPEnvironment_C99.h  FPEnvironment_DEC.h  FPEnvironment_DUMMY.h  FPEnvironment_SUN.h  FPEnvironment_WIN32.h  Handles.h  Hash.h  HashMap.h  HashSet.h  HashStatistic.h  Latin1Encoding.h  Latin2Encoding.h  Latin9Encoding.h  LinearHashTable.h  LocalDateTime.h  Logger.h  MemoryStream.h  Mutex.h  Mutex_POSIX.h  Mutex_VX.h  Mutex_WIN32.h  Mutex_WINCE.h  (+38 more)
include/Classic/: classicopc.h  classicopc_i.c
include/Classic/inc32/: OpcBatchDef.h  OpcBatchError.h  OpcCmd.h  OpcCmd_i.c  OpcDx.h  OpcDx_i.c  OpcHda_Error.h  opcSec.h  opc_ae.h  opcaedef.h  opcauto10a_i.c  opccomn.h  opcda.h  opcerror.h  opchda.h  opchda_i.c
include/Classic/inc64/: OpcCmd.h  OpcCmd_i.c  OpcEnum.h  OpcSec.h  OpcSec_i.c  opcda_i.c  opchda.h  opchda_i.c
include/DaAeHdaClient/: ClientBase.h  OpcBase.h  OpcClientSdk.h
include/DaAeHdaClient/Ae/: AeEvent.h  AeServer.h  AeServerStatus.h  AeSubscription.h
include/DaAeHdaClient/Da/: DaBrowser.h  DaCommon.h  DaGroup.h  DaItem.h  DaItemProperty.h  DaServer.h  DaServerStatus.h
include/DaAeHdaClient/Hda/: HdaAggregate.h  HdaAggregateId.h  HdaItem.h  HdaItemAttribute.h  HdaItemAttributeId.h  HdaServer.h  HdaServerStatus.h
python/PythonWrapper/: PythonWrapper.vcxproj  README.md  module.cpp  pyproject.toml  requirements.txt  setup.py
src/: CMakeLists.txt
src/Technosoftware/: CMakeLists.txt  targetver.h
src/Technosoftware/Base/: ASCIIEncoding.cpp  Ascii.cpp  AtomicCounter.cpp  Bugcheck.cpp  ByteOrder.cpp  DateTime.cpp  DateTimeFormat.cpp  DateTimeFormatter.cpp  DateTimeParser.cpp  Debugger.cpp  Exception.cpp  FPEnvironment.cpp  FPEnvironment_C99.cpp  FPEnvironment_DEC.cpp  FPEnvironment_DUMMY.cpp  FPEnvironment_SUN.cpp  FPEnvironment_WIN32.cpp  Hash.cpp  HashStatistic.cpp  Latin1Encoding.cpp  Latin2Encoding.cpp  Latin9Encoding.cpp  LocalDateTime.cpp  Logger.cpp  MemoryStream.cpp  Mutex.cpp  Mutex_POSIX.cpp  Mutex_VX.cpp  Mutex_WIN32.cpp  Mutex_WINCE.cpp  NumberFormatter.cpp  NumericString.cpp  RWLock.cpp  RWLock_Android.cpp  RWLock_POSIX.cpp  RWLock_VX.cpp  RWLock_WIN32.cpp  RWLock_WINCE.cpp  ServerStates.cpp  Status.cpp  (+20 more)
src/Technosoftware/DaAeHdaClient/: CMakeLists.txt  OpcAccess.cpp  OpcBase.cpp  OpcDaAeHdaClient.vcxproj  OpcDaAeHdaClient.vcxproj.filters  OpcDefs.h  OpcInternal.h  OpcUti.cpp  OpcUti.h  OpcUtils.cpp  OpcUtils.h  Version.rc  dllmain.cpp  pch.cpp  pch.h  targetver.h
src/Technosoftware/DaAeHdaClient/Ae/: AeEvent.cpp  AeEventSinkImpl.cpp  AeEventSinkImpl.h  AeServer.cpp  AeServerImpl.h  AeServerStatus.cpp  AeSubscription.cpp  AeSubscriptionImpl.h
src/Technosoftware/DaAeHdaClient/Da/: DaBrowser.cpp  DaBrowserImpl.h  DaCommon.cpp  DaGroup.cpp  DaGroupImpl.h  DaItem.cpp  DaItemProperty.cpp  DaServer.cpp  DaServerImpl.h  DaServerStatus.cpp  MatchPattern.cpp  MatchPattern.h
src/Technosoftware/DaAeHdaClient/Hda/: HdaAggregate.cpp  HdaItemAttribute.cpp  HdaServer.cpp  HdaServerImpl.h  HdaServerStatus.cpp
src/Technosoftware/DaAeHdaClient/system/: ClientSdk.h  ClientSdk_i.c  OpcAccess.h  OpcErrors.h
src/Technosoftware/DaAeHdaClient/system/inc32/: OpcBatchProps.h  OpcCmdError.h  OpcDxError.h  OpcEnum_i.c  OpcErrSec.h  opcSec_i.c  opc_ae_i.c  opcae_er.h  opcbc.h  opcbc_i.c  opccomn_i.c  opcda_i.c
src/Technosoftware/DaAeHdaClient/system/inc64/: OpcDx.h  OpcDx_i.c  opc_ae.h  opc_ae_i.c  opcbc.h  opcbc_i.c  opccomn.h  opccomn_i.c  opcda.h
